--- a/www/index.html
+++ b/www/index.html
@@ -219,12 +219,12 @@
         <h1 style="opacity: 1">Contacts</h1>
     </div>
 
-    <div data-role="content">
+    <div data-role="content" id="mycontacts">
 
         <ul data-role="listview" data-icon="false">
-            <li data-role="list-divider">
-                <!--Contacts-->
-            </li>
+            <!--<li data-role="list-divider">-->
+                <!--&lt;!&ndash;Contacts&ndash;&gt;-->
+            <!--</li>-->
             <li>
                 <a href="#">
                     <h2>Ethel Chancy</h2>
