--- a/www/index.html
+++ b/www/index.html
@@ -19,8 +19,8 @@
     <meta name="msapplication-tap-highlight" content="no"/>
     <meta name="viewport"
           content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width"/>
-    <meta http-equiv="Content-Security-Policy"
-          content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *"/>
+    <!--<meta http-equiv="Content-Security-Policy"-->
+    <!--content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *"/>-->
 
     <script src="./js/jquery.js"></script>
     <script src="./js/jquery-ui.js"></script>
@@ -223,7 +223,7 @@
 
         <ul data-role="listview" data-icon="false">
             <!--<li data-role="list-divider">-->
-                <!--&lt;!&ndash;Contacts&ndash;&gt;-->
+            <!--&lt;!&ndash;Contacts&ndash;&gt;-->
             <!--</li>-->
             <li>
                 <a href="#">
@@ -259,14 +259,16 @@
             </div>
             <div class="col-xs-4">
                 <div class="box">
-                    <a onclick="change_page('#messagepage','pop')" class="ui-btn ui-mini nd2-btn-icon-block"><i style="color: #FF5722"
-                                                                             class='zmdi zmdi-comment zmd-lg'></i></a>
+                    <a onclick="change_page('#messagepage','pop')" class="ui-btn ui-mini nd2-btn-icon-block"><i
+                            style="color: #FF5722"
+                            class='zmdi zmdi-comment zmd-lg'></i></a>
                 </div>
             </div>
             <div class="col-xs-4">
                 <div class="box">
-                    <a onclick="change_page('#contactspage','pop')" class="ui-btn ui-mini nd2-btn-icon-block"><i style="color: #FF5722"
-                                                                             class='zmdi zmdi-account zmd-lg'></i></a>
+                    <a onclick="change_page('#contactspage','pop')" class="ui-btn ui-mini nd2-btn-icon-block"><i
+                            style="color: #FF5722"
+                            class='zmdi zmdi-account zmd-lg'></i></a>
                 </div>
             </div>
         </div>
