--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="./js/nativedroid2.js"></script>
     <script src="./js/nd2settings.js"></script>
     <script type="text/javascript" src="./js/myscript.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
     <!--<script type="text/javascript" src="./js/index.js"></script>-->
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 
