--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
     <script type="text/javascript" src="./js/myscript.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <!--<script type="text/javascript" src="./js/index.js"></script>-->
-    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+    <script type="text/javascript" src="./js/chartist.min.js"></script>
 
 </head>
 
