--- a/www/index.html
+++ b/www/index.html
@@ -99,7 +99,7 @@
     <div data-role="content">
         <br><br><br><br>
 
-        <div class="ct-chart ct-perfect-fourth"></div>
+        <div style="display: inherit" class="ct-chart ct-perfect-fourth"></div>
     </div>
     <br>
     <br>
