--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/animate.css"/>
     <link rel="stylesheet" href="./css/nativedroid2.color.deep-orange.css"/>
     <link rel="stylesheet" href="./css/nativedroid2.css"/>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <link rel="stylesheet" href="./css/chartist.min.css">
 
     <meta charset="utf-8"/>
     <meta name="format-detection" content="telephone=no"/>
