--- a/www/index.html
+++ b/www/index.html
@@ -91,7 +91,7 @@
 <!--Dashboard-->
 <div data-role="page" id="dashboard">
     <div data-role="header" data-position="fixed">
-        <!--<a href="#bottomsheetblock" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-more-vert"></i></a>-->
+        <a href="#loginpage" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-home"></i></a>
         <!--<a href="#leftpanel" class="ui-btn ui-btn-left wow fadeIn" data-wow-delay='0.8s'><i class="zmdi zmdi-arrow-back"></i></a>-->
         <h1 style="opacity: 1">Dashboard</h1>
     </div>
@@ -158,7 +158,7 @@
 <!--Message page-->
 <div data-role="page" id="messagepage">
     <div data-role="header" data-position="fixed">
-        <!--<a href="#bottomsheetblock" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-more-vert"></i></a>-->
+        <a href="#loginpage" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-home"></i></a>
         <!--<a href="#leftpanel" class="ui-btn ui-btn-left wow fadeIn" data-wow-delay='0.8s'><i class="zmdi zmdi-arrow-back"></i></a>-->
         <h1 style="opacity: 1">SMS</h1>
     </div>
@@ -215,8 +215,7 @@
 <!--Contacts page-->
 <div data-role="page" id="contactspage">
     <div data-role="header" data-position="fixed">
-        <!--<a href="#bottomsheetblock" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-more-vert"></i></a>-->
-        <!--<a href="#leftpanel" class="ui-btn ui-btn-left wow fadeIn" data-wow-delay='0.8s'><i class="zmdi zmdi-arrow-back"></i></a>-->
+        <a href="#loginpage" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.0s' data-transition="pop"><i class="zmdi zmdi-home"></i></a>
         <h1 style="opacity: 1">Contacts</h1>
     </div>
 
