--- a/www/index.html
+++ b/www/index.html
@@ -236,6 +236,22 @@
             <p><b style=''>0542688902</b></p>
             <p></p>
         </div>
+
+        <div class='col-xs-12' onclick='select_contacts()'>
+            <input style='opacity: 0' hidden value='false'>
+            <!--<input type='text' name='checkbox-1a' checked=''>-->
+            <p><b style=''>Samuel</b></p>
+            <p><b style=''>0542688902</b></p>
+            <p></p>
+        </div>
+
+        <div class='col-xs-12' onclick='select_contacts()'>
+            <input style='opacity: 0' hidden value='false'>
+            <!--<input type='text' name='checkbox-1a' checked=''>-->
+            <p><b style=''>Samuel</b></p>
+            <p><b style=''>0542688902</b></p>
+            <p></p>
+        </div>
     </div>
 
     <div data-role="footer" data-position="fixed">
