--- a/www/index.html
+++ b/www/index.html
@@ -174,7 +174,7 @@
         <br><br>
 
         <div>
-            <a href="#"
+            <a onclick="send_sms()"
                class="ui-btn ui-btn-inline clr-btn-deep-orange waves-effect waves-button waves-effect waves-button">Send</a>
         </div>
     </div>
