--- a/www/index.html
+++ b/www/index.html
@@ -218,36 +218,24 @@
 
     <div data-role="content" id="mycontacts">
 
-        <div class='' onclick='select_contacts()'>
-            <input style='' hidden value='false' readonly>
+        <div class='col-xs-12' id='3' onclick=''>
+            <input style='opacity: 0' hidden value='false' id='1'>
+            <!--<input type='text' name='checkbox-1a' id='6' checked=''>-->
             <p><b style=''>Samuel</b></p>
-            <p><b style=''>0542688902</b></p>
-            <p hidden class="align-right"><i class="zmdi zmdi-check"></i></p>
+            <p><b style=''>054689902</b></p>
+            <p  class='align-right' id='4'><i class='zmdi zmdi-check-circle zmd-lg'></i></p>
         </div>
 
-        <div class='col-xs-12' onclick='select_contacts()'>
-            <input style='opacity: 0; display: none' hidden value='false'>
-            <!--<input type='text' name='checkbox-1a' checked=''>-->
+        <div class='col-xs-12' id='3' onclick=''>
+            <input style='opacity: 0' hidden value='false' id='1'>
+            <!--<input type='text' name='checkbox-1a' id='6' checked=''>-->
             <p><b style=''>Samuel</b></p>
-            <p><b style=''>0542688902</b></p>
-            <p></p>
+            <p><b style=''>054689902</b></p>
+            <p  class='align-right' id='4'><i class='zmdi zmdi-check zmd-lg'></i></p>
         </div>
 
-        <div class='col-xs-12' onclick='select_contacts()'>
-            <input style='opacity: 0;display: none' hidden value='false'>
-            <!--<input type='text' name='checkbox-1a' checked=''>-->
-            <p><b style=''>Samuel</b></p>
-            <p><b style=''>0542688902</b></p>
-            <p></p>
-        </div>
 
-        <div class='col-xs-12' onclick='select_contacts()'>
-            <input style='opacity: 0; display: none' hidden value='false'>
-            <!--<input type='text' name='checkbox-1a' checked=''>-->
-            <p><b style=''>Samuel</b></p>
-            <p><b style=''>0542688902</b></p>
-            <p></p>
-        </div>
+
     </div>
 
     <div data-role="footer" data-position="fixed">
