--- a/www/index.html
+++ b/www/index.html
@@ -234,11 +234,9 @@
             <p  class='align-right' id='4'><i class='zmdi zmdi-check zmd-lg'></i></p>
         </div>
 
-
-
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div style="position: fixed;  bottom: 0" data-role="footer" data-position="fixed">
 
         <div class="row center-xs">
 
