--- a/www/index.html
+++ b/www/index.html
@@ -216,49 +216,34 @@
         <h1 style="opacity: 1">Contacts</h1>
     </div>
 
-    <div data-role="content">
-        <input type="text" value="" placeholder="Search for contacts"  data-clear-btn="true" style="">
-    </div>
+    <div data-role="content" id="mycontacts" data-filter="true" data-filter-reveal="false" data-filter-placeholder="Search">
 
-    <div data-role="content" id="mycontacts">
-
-        <div class='col-xs-12' id='3' onclick=''>
+        <div class='col-xs-12' id='sam1' onclick=''>
             <br>
-            <input readonly style='opacity: 0; display: none' hidden value='false' id='1' data-clear-btn="true">
+            <input readonly style='opacity: 0; display: none' hidden value='false' id='sam2' data-clear-btn="true">
             <!--<input type='text' name='checkbox-1a' id='6' checked=''>-->
             <p><b style=''>Samuel</b></p>
             <p><b style=''>054689902</b></p>
             <!--<p class='align-right' id='4'><i class='zmdi zmdi-check-circle zmd-lg'></i></p>-->
         </div>
 
-        <div class='col-xs-12' id='3' onclick=''>
+        <div class='col-xs-12' id='max1' onclick=''>
             <br>
-            <input readonly style='opacity: 0; display: none' hidden value='false' id='1' data-clear-btn="true">
+            <input readonly style='opacity: 0; display: none' hidden value='false' id='max2' data-clear-btn="true">
             <!--<input type='text' name='checkbox-1a' id='6' checked=''>-->
-            <p><b style=''>Samuel</b></p>
-            <p><b style=''>054689902</b></p>
-            <p class='align-right' id='4'><i class='zmdi zmdi-check zmd-lg'></i></p>
+            <p><b style=''>Max</b></p>
+            <p><b style=''>233758903</b></p>
+            <!--<p class='align-right' id='4'><i class='zmdi zmdi-check-circle zmd-lg'></i></p>-->
         </div>
 
-        <div class='col-xs-12' id='3' onclick=''>
+        <div class='col-xs-12' id='felix1' onclick=''>
             <br>
-            <input style='opacity: 0' hidden value='false' id='1' data-clear-btn="true">
+            <input readonly style='opacity: 0; display: none' hidden value='false' id='felix2' data-clear-btn="true">
             <!--<input type='text' name='checkbox-1a' id='6' checked=''>-->
-            <p><b style=''>Samuel</b></p>
-            <p><b style=''>054689902</b></p>
-            <p class='align-right' id='4'><i class='zmdi zmdi-check zmd-lg'></i></p>
+            <p><b style=''>Felix</b></p>
+            <p><b style=''>0542688943</b></p>
+            <!--<p class='align-right' id='4'><i class='zmdi zmdi-check-circle zmd-lg'></i></p>-->
         </div>
-
-        <div class='col-xs-12' id='3' onclick=''>
-            <br>
-            <input style='opacity: 0' hidden value='false' id='1' data-clear-btn="true">
-            <!--<input type='text' name='checkbox-1a' id='6' checked=''>-->
-            <p><b style=''>Samuel</b></p>
-            <p><b style=''>054689902</b></p>
-            <p class='align-right' id='4'><i class='zmdi zmdi-check zmd-lg'></i></p>
-        </div>
-
-
     </div>
 
     <div style="position: fixed;  bottom: 0" data-role="footer" data-position="fixed">
