--- a/www/index.html
+++ b/www/index.html
@@ -236,12 +236,39 @@
             <!--<p class='align-right' id='4'><i class='zmdi zmdi-check-circle zmd-lg'></i></p>-->
         </div>
 
-        <div class='col-xs-12' id='felix1' onclick=''>
+        <div class='col-xs-12' id='maxine1' onclick=''>
             <br>
             <input readonly style='opacity: 0; display: none' hidden value='false' id='felix2' data-clear-btn="true">
             <!--<input type='text' name='checkbox-1a' id='6' checked=''>-->
-            <p><b style=''>Felix</b></p>
-            <p><b style=''>0542688943</b></p>
+            <p><b style=''>Maxine</b></p>
+            <p><b style=''>0542689386</b></p>
+            <!--<p class='align-right' id='4'><i class='zmdi zmdi-check-circle zmd-lg'></i></p>-->
+        </div>
+
+        <div class='col-xs-12' id='tumi1' onclick=''>
+            <br>
+            <input readonly style='opacity: 0; display: none' hidden value='false' id='felix2' data-clear-btn="true">
+            <!--<input type='text' name='checkbox-1a' id='6' checked=''>-->
+            <p><b style=''>Tumi</b></p>
+            <p><b style=''>0542680982</b></p>
+            <!--<p class='align-right' id='4'><i class='zmdi zmdi-check-circle zmd-lg'></i></p>-->
+        </div>
+
+        <div class='col-xs-12' id='david1' onclick=''>
+            <br>
+            <input readonly style='opacity: 0; display: none' hidden value='false' id='felix2' data-clear-btn="true">
+            <!--<input type='text' name='checkbox-1a' id='6' checked=''>-->
+            <p><b style=''>David</b></p>
+            <p><b style=''>0542685343</b></p>
+            <!--<p class='align-right' id='4'><i class='zmdi zmdi-check-circle zmd-lg'></i></p>-->
+        </div>
+
+        <div class='col-xs-12' id='lisa1' onclick=''>
+            <br>
+            <input readonly style='opacity: 0; display: none' hidden value='false' id='felix2' data-clear-btn="true">
+            <!--<input type='text' name='checkbox-1a' id='6' checked=''>-->
+            <p><b style=''>lisa</b></p>
+            <p><b style=''>0584398943</b></p>
             <!--<p class='align-right' id='4'><i class='zmdi zmdi-check-circle zmd-lg'></i></p>-->
         </div>
     </div>
